--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: #000g;
+    background-color: #000;
 }
 .container {
     max-width: 1140px;
